--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-intl": "^4.1.0",
